ui: Update radiation window to have (some) functional graphs and warnings. ui: Fix up how RRD fill / stretch works

--- a/http_data/css/kismet.ui.radiation.css
+++ b/http_data/css/kismet.ui.radiation.css
@@ -1,11 +1,35 @@
 .k-rad-contentdiv {
     width: 100%;
-    height: 100%;
 }
 
-.k-rad-spctrum-canvas {
+.k-rad-spectrum-canvas {
     width: 100%;
-    height: 100;
+    min-height: 200px;
+    height: 200px;
+}
+
+.k-rad-cps-canvas {
+    width: 100%;
+    height: 250px;
+    max-height: 250px;
+}
+
+.k-rad-usv-canvas {
+    width: 100%;
+    height: 250px;
+    max-height: 250px;
+}
+
+.k-rad-graph-title {
+    font-size: large;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.k-rad-contentdiv {
+    width: 100%;
+    height: 100%;
 }
 
 .radiation-toolbar-cps {
@@ -32,4 +56,25 @@
 
     align-items: center;
     justify-content: center;
+}
+
+.rad-flex-box {
+    margin: 10px;
+}
+
+.rad-flex-stack {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.rad-flex-row {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.rad-flex-header {
+    flex: 0.25;
+    font-weight: bold;
 }
